# guitar-exercises

./: Cargo.toml  Dockerfile  Jenkinsfile  OWNERS  OWNERS_ALIASES  README.md  index.html  skaffold.yaml
charts/guitar-exercises/: Chart.yaml  Makefile  values.yaml
charts/preview/: Makefile  requirements.yaml
src/: cli.rs  cli.yml  fretboard.rs  hand.rs  lib.rs  main.rs  pattern.rs  scale.rs
static/: index.html
